[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { path = "../awc"}

miniquad = "0.3.11"
macroquad = "0.3"
glam = { features = ["serde"] }

mlua = { version = "0.8", features = ["lua54", "vendored"] }

ron = "0.8"
serde = { version = "1", features = ["derive"] }